[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

[patch."https://github.com/paritytech/substrate"]
# substrate
beefy-merkle-tree = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }

# pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }

[patch.crates-io]
# substrate
beefy-merkle-tree = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
frame-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-arithmetic = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-trie = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
sp-version = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }

# sc-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-network-gossip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-assets = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-balances = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-staking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-im-online = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-basic-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-slots = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-rpc-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sc-telemetry = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-election-provider-support = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-executive = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-authorship = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-mmr = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-sudo = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-offchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }
# substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.13" }

# tendermint
tendermint    = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-proto  = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-light-client = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }
tendermint-testgen = { git = "https://github.com/informalsystems/tendermint-rs", branch = "v0.23.x" }


[patch."https://github.com/octopus-network/ibc-rs"]
ibc = { path = "./modules" }
ibc-proto = { path = "./proto" }
