[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

[patch."https://github.com/octopus-network/hermes"]
ibc = { path = "./modules" }
ibc-proto = { path = "./proto" }


