[workspace]

resolver = "2"

members = [
    "modules",
    "relayer",
    "relayer-cli",
    "relayer-rest",
    "telemetry",
    "proto",
    "tools/integration-test",
    "tools/test-framework",
]

exclude = [
    "ci/no-std-check",
    "proto-compiler"
]

# [patch."https://github.com/paritytech/substrate.git"]
# # substrate
# beefy-merkle-tree = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-support = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-system = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-api = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-application-crypto = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-arithmetic = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-blockchain = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-consensus = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-core = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-io = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-keystore = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-runtime = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-staking = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-std = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-trie = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-mmr-rpc = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-state-machine = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-inherents = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-version = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# beefy-primitives = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18"}
# sp-keyring = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18"}

# pallet-session = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-client-api = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-keystore = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-network = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-network-gossip = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-rpc = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# substrate-prometheus-endpoint = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-benchmarking = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-assets = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-balances = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-staking = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-im-online = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-basic-authorship = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-chain-spec = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-cli = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-consensus-slots = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-consensus-uncles = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-finality-grandpa-rpc = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-authorship = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-timestamp = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-consensus = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-consensus-babe = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-executor = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-finality-grandpa = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-rpc-api = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-service = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-telemetry = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sc-transaction-pool = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-block-builder = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-consensus-babe = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-finality-grandpa = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# substrate-frame-rpc-system = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-election-provider-support = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-executive = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-system-benchmarking = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-authorship = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-babe = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-grandpa = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-mmr = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-randomness-collective-flip = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-staking-reward-curve = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-sudo = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-timestamp = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-offchain = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-session = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# sp-transaction-pool = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }
# substrate-build-script-utils = { git = "https://github.com/octopus-network/substrate.git", branch = "octopus-dev-v0.9.18" }

[patch.crates-io]
# substrate
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"}
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"}

syn =  { git = "https://github.com/octopus-network/syn.git " }

# sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-network-gossip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# frame-election-provider-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-mmr = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[patch."https://github.com/octopus-network/hermes"]
ibc = { path = "./modules" }
ibc-proto = { path = "./proto" }


