[package]
name = 'calls'
version = '0.1.0'
authors = ['Yuanchao Sun <julian@oct.network>']
edition = '2018'

[dependencies]
async-trait = "0.1.50"
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive', 'full'] }
substrate-subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = "octopus-dev" }
substrate-subxt-proc-macro = { version = "0.15.0" }

pallet-ibc = { git = 'https://github.com/octopus-network/substrate-ibc.git', branch = 'dv-ibc-dev' }
#pallet-ibc = { path = "../../substrate/bin/node-template/pallets/ibc" }


ibc = { version = "0.8.0", path = "../modules" }

frame-system = { version = '3.0.0' }
pallet-balances = { version = '3.0.0' }
sp-core = { version = '3.0.0'}
sp-finality-grandpa = { version = '3.0.0' }
sp-runtime = { version = '3.0.0' }
#prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }