[package]
name = 'calls'
version = '0.2.0'
authors = ['Yuanchao Sun <julian@oct.network>']
edition = '2018'

[dependencies]
subxt = { version = "0.15.0", git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'octopus-v0.9.12' }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
env_logger = "0.8.3"
hex = "0.4.3"
#prost = { package = "informalsystems-prost", version = "0.8.1", default-features = false }
prost-types = { package = "informalsystems-prost-types", version = "0.8.1", default-features = false }

ibc = { path = "../modules" }

#async-trait = "0.1.50"
#codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive', 'full'] }
#substrate-subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = "octopus-dev" }
#substrate-subxt-proc-macro = { version = "0.15.0" }
#
#pallet-ibc = { git = 'https://github.com/octopus-network/substrate-ibc.git', branch = 'dv-ibc-dev-0.9.12-tag' }
##pallet-ibc = { path = "../../substrate/bin/node-template/pallets/ibc" }
#
#
#ibc = { version = "0.7.2", path = "../modules" }
#
#frame-system = { version = '3.0.0' }
#pallet-balances = { version = '3.0.0' }
#sp-core = { version = '3.0.0'}
#sp-finality-grandpa = { version = '3.0.0' }
#sp-runtime = { version = '3.0.0' }
#prost-types = { package = "informalsystems-prost-types", version = "0.8.1", default-features = false }