[package]
name = 'calls'
version = '0.2.0'
authors = ['Yuanchao Sun <julian@oct.network>']
edition = '2018'

[dependencies]
subxt = { version = "0.15.0", git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'octopus-v0.9.12' }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
env_logger = "0.8.3"
hex = "0.4.3"
#prost = { package = "informalsystems-prost", version = "0.8.1", default-features = false }
prost-types = { package = "informalsystems-prost-types", version = "0.8.1", default-features = false }
beefy-primitives = { git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }

ibc = { path = "../modules" }
