[package]
name       = "ibc"
version    = "0.0.6"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = [
  "Informal Systems <hello@informal.systems>"
]

description = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
"""

[features]
# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = [ "tendermint-testgen" ]
default = ['std']
std = [
    'codec/std',
    'finality-grandpa/std',
    'hash-db/std',
    'sp-application-crypto/std',
    'sp-core/std',
    'sp-finality-grandpa/std',
    'sp-trie/std',
    'sp-std/std',
    'sp-runtime/std',
]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.6.0", path = "../proto" }
ics23 = "0.6.0"
anomaly = "0.2.0"
chrono = "0.4"
thiserror = "1.0.11"
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1"
tracing = "0.1.13"
prost = "0.6.1"
prost-types = "0.6.1"
bytes = "1.0.0"
dyn-clonable = "0.9.0"
regex = "1"
bech32 = "0.7.2"

sp-application-crypto = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-finality-grandpa = { default-features = false, version = '2.0.0' }
sp-trie = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[dependencies.hash-db]
default-features = false
version = '0.15.2'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.finality-grandpa]
default-features = false
features = ['derive-codec']
version = '0.12.3'

[dependencies.tendermint]
version = "=0.17.0"

[dependencies.tendermint-rpc]
version = "=0.17.0"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client]
version = "=0.17.0"

[dependencies.tendermint-proto]
version = "=0.17.0"

[dependencies.tendermint-testgen]
version = "=0.17.0"
optional = true

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
subtle-encoding = { version = "0.5" }
tendermint-testgen = { version = "=0.17.0" } # Needed for generating (synthetic) light blocks.
